2003-06-25  Bernhard Held <bernhard@bernhardheld.de>

	* src/mcs51/gen.c (gencjneshort): fixed bug #760345

2003-06-20  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

	* as/mcs51/aomf51.c: Make sure the size of the last procedure is correct.

2003-06-19  Borut Razem <borut.razem@siol.net>

	* src/z80/main.c: fixed Z80 port again: missing -k library paths in linker command line

2003-06-19  Borut Razem <borut.razem@siol.net>

	* src/SDCCutil.h, src/SDCCutil.c, src/SDCCglobl.h, src/SDCCmain.c, src/z80/main.c:
	fixed Z80 port - crt0.o: cannot open.

2003-06-19  Bernhard Held <bernhard@bernhardheld.de>

	* support/Util/MySystem.c (merge_command): revert bad fix

2003-06-18  Borut Razem <borut.razem@siol.net>

	* src/SDCC.lex, src/SDCCmain.c: fixed some warnings, introduced with changes made 15.06.1003

2003-06-18  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

	* src/SDCCglobl.h, src/SDCCmain.c, doc/sdccman.lyx:
	option --use-stdout sends errors to stdout instead of stderr.

2003-06-18  Bernhard Held <bernhard@bernhardheld.de>

	* support/Util/MySystem.c (merge_command): quick fix for Linux segfault with \"cmd\" arg

2003-06-15  Borut Razem <borut.razem@siol.net>

	* support/cpp2/sdcc.h: HAVE_DOS_BASED_FILE_SYSTEM defined for _WIN32
	* src/SDCC.lex: cloneXxx and copyAndFreeXxx functions for options and optimize stack handling
	* src/SDCCglobl.h, src/SDCCmain.c, src/ds390/main.c, src/mcs51/main.c, src/z80/main.c:
	fixed width array of pointers replaced with sets;
	multiple include and lib paths ared transferred to preprocessor and linker
	* src/SDCCset.c, src/SDCCset.h: added function setFromSetNonRev() and mergeSets()
	* src/SDCCsymt.c: reimplemented function inCalleeSaveList() by using sets instead
	fixed width array of pointers
	* src/SDCCutil.c, src/SDCCutil.h: added functions fputStrSet(), appendStrSet(), joinStrSet();
	removed functions addToList(), join(), joinn(), pathCharsEquivalent(), pathCharTransform(),
	fixupPath(), getPathDifference()